# StellarCredit-1.0

./: .env-dev  .env-homolog  .env-prod  .gitignore  README.md  check_system.sh  init_system.sh  stellar-credit-ai-agent-en.json  stellar-credit-ai-agent.json  stop-stellar-credit.sh  stop_system.sh  test-realtime.sh  test-responsive.sh  test-system.sh
ai-engine/: api_server.py  requirements.txt  stellar_ai_scoring.py
backend/: env.example  package.json  server.js
backend/middleware/: auth.js  validation.js
backend/services/: aiService.js  contractService.js  stellarService.js  websocketService.js
backend/utils/: logger.js
contracts/: Cargo.toml
contracts/src/: lib.rs
docs/: README.md  docusaurus.config.js  package.json  sidebars.js  typedoc.backend.json  typedoc.frontend.json
docs/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
docs/docs/: intro.md  roadmap.md
docs/docs/architecture/: ai-engine.md  backend.md  contracts.md  frontend.md  overview.md
docs/docs/guides/: deployment.md  scoring-algorithm.md  setup.md  wallets.md
docs/docs/reference/: api-ai.md  api-backend.md  contract-interface.md
docs/src/css/: custom.css
docs/src/pages/: index.js
frontend/: LOGO_UPDATES.md  next.config.js  package.json  tailwind.config.ts
frontend/public/: manifest.json
frontend/src/: i18n.ts  middleware.ts  routing.ts
frontend/src/app/: globals.css  layout.tsx  viewport.ts
frontend/src/hooks/: useElisa.ts  useRealTime.ts  (+2 more)
(+64 files in other folders)
